--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -22,12 +22,14 @@ jobs:
          result-encoding: string
          script: |
              const bodycmt = context.payload.comment.body
-             if(bodycmt.includes("echo:")) {
-               const re = /\/echo:(\w+)\s*/;
+             if(bodycmt.includes("/echo:"))
+             {
+               const re = s/\/echo://;
+               const res = re.exec(bodycmt)
                github.rest.issues.createComment({
                  issue_number: context.issue.number,
                  owner: context.repo.owner,
                  repo: context.repo.repo,
-                 body: bodycmt
+                 body: res
                })
              }
