--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -25,11 +25,22 @@ jobs:
              if(bodycmt.includes("/echo:"))
              {
                const re = s/\/echo://;
-               const res = re.exec(bodycmt)
                github.rest.issues.createComment({
                  issue_number: context.issue.number,
                  owner: context.repo.owner,
                  repo: context.repo.repo,
-                 body: res
+                 body: bodycmt
                })
              }
+
+    - name: Emoji-comment
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
+            github.rest.reactions.createForIssueComment({
+              comment_id: ${{ github.event.comment.id }},
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              content: 'rocket'
+            })
