--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -15,11 +15,11 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/github-script@v6
+        - uses: actions/github-script@v6
         id: get_round
         with:
-         result-encoding: string
-         script: |
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          script: |
              const bodycmt = context.payload.comment.body
              if(bodycmt.includes("/echo:"))
              {
